# Daily-Expense-Tracker

./: .coveragerc  .editorconfig  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  _report.json  analysis_service.py  check-all-progress.py  check-progress.py  check_methods.py  comprehensive_report.json  fix_all_issues.py  main.py  phase-all-summary.py  phase1-fixer.py  phase1-verify.py  phase2-fixer.py  phase2-verify.py  phase3-fixer.py  phase3-verify.py  phase4-fixer.py  phase4-verify.py  phase5-verify.py  progress_report.json  pyproject.toml  remaining.py  requirements.txt  run.py  setup.cfg  setup.py  structure-tree.py  structure.py  verification_report.json
config/: __init__.py  database_config.py  logging_config.py
daily_expense_tracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: README.md  deployment.md  dev-cheatsheet.md  development.md  project_plan.md  testing.md  usage.md
generate/: file_and_folder.py  git_setup.py  sample_data.py  structure.py
models/: __init__.py  category_model.py  expense_model.py
services/: __init__.py  analysis_service.py  database_service.py  expense_service.py  export_service.py
tests/: __init__.py  conftest.py  test_database.py  test_expenses.py  test_export.py  test_helper.py  test_import.py  test_integration.py
utils/: __init__.py  date_utils.py  exceptions.py  formatters.py  validation.py
visualization/: __init__.py  chart_service.py
