# setup.cfg
[metadata]
name = daily-expense-tracker
version = 4.0.0
author = Developer
description = Daily Expense Tracker Application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/daily-expense-tracker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib>=3.7.0
    pandas>=2.0.0
    openpyxl>=3.1.0
    python-dateutil>=2.8.0

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.entry_points]
console_scripts =
    expense-tracker = main:main