# setup.cfg
[metadata]
name = daily-expense-tracker
version = 1
author = Arkan Tsabit
author_email = aarkantsabit@gmail.com
description = Daily Expense Tracker Application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArkanTsabit123/Daily-Expense-Tracker/commits/main
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = 3.13.7
install_requires =
    matplotlib==3.7.1
    pandas==2.0.3
    openpyxl==3.1.2
    python-dateutil==2.8.2

    # Development & Testing
    pytest==7.4.2
    pytest-cov==4.1.0
    pytest-mock==3.11.1

    # Code Quality
    black==23.12.1
    flake8==6.1.0
    isort==5.12.0
    mypy==1.5.1

    # Security
    bandit==1.7.5

    # Performance
    psutil==5.9.5

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.entry_points]
console_scripts =
    expense-tracker = main:main